31-05-2023 PSS modifed the manifests to fix a problem with Firefox 31-05-2023 PSS fixed a wrong color when records is in waiting mode 31-05-2023 PSS modified Checkpage to not include records with "No suggestions"

--- a/src/wptf-style.css
+++ b/src/wptf-style.css
@@ -1268,7 +1268,7 @@ button[disabled] {
 }
 
 table.translations tr.preview.wptf-translated {
-    background-color: #FFFFC2;
+    background-color: #ffe399;
 }
 
 table.translations tr.preview.status-rejected {
